[package]
name = "osu-pp-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
rosu-v2 = { git = "https://github.com/MaxOhn/rosu-v2", branch = "lazer" }
tokio = { version = "1.45.1", features = ["full"] }
rosu-pp = "1.0.0" # Check version if needed, but 1.0 is stable-ish
tokio-tungstenite = "0.26.1"
futures = "0.3.31"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
thiserror = "2.0.7"
